<resources>
    <string name="app_name">ContrateDiarista</string>
    <string name="login">login</string>
    <string name="senha">senha</string>
    <string name="logar">logar</string>
    <string name="facebook_app_id">1900732833582088</string>
    <string name="fb_login_protocol_scheme">fb1900732833582088</string>
    <string name="preencha_login_senha">Preencha campos login e senha</string>
    <string name="sair">Sair</string>
    <string name="ERROR_WRONG_PASSWORD">Senha inválida</string>
    <string name="ERROR_USER_NOT_FOUND">Usuário inválido</string>
    <string name="ERROR_INVALID_EMAIL">Email no formato inválido</string>
    <string name="action_settings">Configurações</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="principal">Principal</string>
    <string name="mensagens">Mensagens</string>
    <string name="conversas">Conversas</string>
    <string name="cadastrar_vaga">Cadastrar Vaga</string>
    <string name="data_inicial">Data Inicial</string>
    <string name="data_final">Data Final</string>
    <string name="valor_periodo">Valor Periodo</string>
    <string name="tipo_periodo">Tipo Período</string>
    <string name="tipos_atividades">Tipos Atividade</string>
    <string name="dias_semana">Dias da Semana</string>
    <string name="seg">Seg</string>
    <string name="ter">Ter</string>
    <string name="qua">Qua</string>
    <string name="qui">Qui</string>
    <string name="sex">Sex</string>
    <string name="sab">Sáb</string>
    <string name="cadastrando_vaga">Cadastrando vaga</string>
    <string name="erro_cadastrar_vaga">Erro ao cadastrar vaga</string>
    <string name="vaga_cadastrado_sucesso">Vaga Cadastrada com sucesso</string>
    <string name="buscando_informacoes_usuario">Buscando informações do usuário</string>
    <string name="erro_buscar_informacoes_usuario">Erro ao buscar informações do usuário</string>
    <string name="cadastrar_disponibilidade">Cadastrar Disponibilidade</string>
    <string name="carregando_lista_atividades">Carregando lista de atividades</string>
    <string name="erro_carregar_lista_atividades">Erro ao carregar lista de atividades</string>
    <string name="data">Data</string>
    <string name="consultar">Consultar</string>
    <string name="selecione_tipo_periodo">Selecione o período</string>
    <string name="digite_valor_periodo">Digite o valor do período</string>
    <string name="selecione_pelo_menos_uma_atividade">Selecione pelo menos uma atividade</string>
    <string name="cadastrando_disponibilidade">Cadastrando disponibilidade</string>
    <string name="erro_cadastrar_disponibilidade">Erro ao cadastrar disponibilidade</string>
    <string name="disponibilidade_cadastrada_sucesso">Disponibilidade cadastrada com sucesso</string>
    <string name="title_activity_cadastrar_tipo_atividade_ui">CadastrarTipoAtividadeUi</string>
    <string name="cadastrar_tipo_atividade">Cadastrar tipo atividade</string>
    <string name="descricao">Descrição</string>
    <string name="id">Id</string>
    <string name="buscando_tipos_atividade">Buscando tipos de atividade</string>
    <string name="erro_buscar_tipos_atividade">Erro ao buscar tipos de atividade</string>
    <string name="digite_descricao">Preecha o campo descrição</string>
    <string name="cadastrando_tipo_atividade">Cadastrando tipo de atividade</string>
    <string name="erro_ao_cadastrar_tipo_atividade">Erro ao cadastrar tipo de atividade</string>
    <string name="tipo_atividade_cadastrado_sucesso">Tipo de atividade cadastrado com sucesso</string>
    <string name="excluindo_atividade">Excluindo tipo atividade</string>
    <string name="erro_excluir_atividade">Erro ao excluir tipo de atividade</string>
    <string name="excluido_sucesso">Excluído com sucesso</string>
    <string name="valor_inicial">Valor Inicial</string>
    <string name="valor_final">ValorFinal</string>
    <string name="buscar_vagas">Buscar Vaga</string>
    <string name="buscando_vagas">Buscando vagas</string>
    <string name="erro_buscar_vagas">Erro ao buscar vagas</string>
    <string name="nenhum_resultado_encontrado">Nenhum resultado encontrado</string>
    <string name="erro_ao_pesquisar">Erro ao pesquisar</string>
    <string name="vagas">Vagas</string>
    <string name="visualizar_informacoes_vaga">Visualização das informações da vaga</string>
    <string name="candidatar">Candidatar-se</string>
    <string name="voce_ja_candidatou">Você já se candidatou a essa vaga</string>
    <string name="candidatando_vaga">Candidatando-se a vaga</string>
    <string name="erro_candidatar_vaga">Erro ao candidatar-se a vaga</string>
    <string name="nota">Nota</string>
    <string name="observacao">Observação</string>
    <string name="avaliar">Avaliar</string>
    <string name="nome">Nome</string>
    <string name="prestador_selecionado">Prestador Selecionado</string>
    <string name="avaliacao">Avaliação</string>
    <string name="qtde_avaliacao">Qtde Avaliação</string>
    <string name="remover">Remover</string>
    <string name="aprovar">Aprovar</string>
    <string name="prestadores">Prestadores</string>
    <string name="valor_periodo_final">Valor Final</string>
    <string name="valor_periodo_inicial">Valor Inicial</string>
    <string name="buscar">Buscar</string>
    <string name="visualizar_vagas_vinculadas">Visualizar vagas vinculadas</string>
    <string name="avaliar_contratante">Avaliar contratante</string>
    <string name="consultar_disponibilidade">Consultar Disponibilidade</string>
    <string name="aprovacao_vagas">Aprovação de vagas</string>
    <string name="visualizar_aprovacao_vagas">Visualizar aprovação de vagas</string>
    <string name="informacoes_aprovacao">Informalções da aprovação</string>
    <string name="informacoes_usuario">Informações do usuário</string>
    <string name="consultar_disponibilidades_cadastradas">Consultar disponibilidades cadastradas</string>
    <string name="listar_disponibilidades">Listar disponibilidades</string>
    <string name="title_activity_menu_drawer_ui">MenuDrawerUi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logando">logando...</string>
    <string name="excluir">Excluir</string>
    <string name="vagas_cadastradas">Vagas Cadastradas</string>
    <string name="agenda">Agenda</string>
    <string name="consultar_disponibilidade_prestador">Consultar disponibilidade prestador</string>
    <string name="consultar_vagas">Consultar vagas</string>
    <string name="consultar_vagas_pretendidas">Consultar vagas pretendidas</string>
    <string name="menu_agenda_prestador">Agenda</string>
</resources>
