<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.contratediarista.br.contratediarista.ui.ConsultarDisponibilidadePrestadorUi">


    <TextView
        android:id="@+id/tv_data_inicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/data_inicial" />

    <EditText
        android:id="@+id/et_data_inicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="99/99/9999"
        android:inputType="date"
        android:maxLength="10" />

    <TextView
        android:id="@+id/tv_data_final"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/data_final" />

    <EditText
        android:id="@+id/et_data_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="99/99/9999"
        android:inputType="date"
        android:maxLength="10" />

    <TextView
        android:id="@+id/valor_periodo_inicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/valor_periodo_inicial" />

    <EditText
        android:id="@+id/et_valor_periodo_inicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/valor_periodo_final"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/valor_periodo_final" />

    <EditText
        android:id="@+id/et_valor_periodo_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/buscar"/>
</LinearLayout>
